Added Dashboard feature. Prototype ready for demonstration

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,9 @@
     <header>
       <h1>Code Efficiency Studio</h1>
       <p>Paste Python or Java code, get optimization insights and CO₂ savings.</p>
+      <nav>
+        <a href="dashboard.html">Open Impact Dashboard</a>
+      </nav>
     </header>
 
     <main>
